--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -9,6 +9,7 @@
         color: #{map-deep-get($colors, 'colors', 'neutral', 10)};
     }
     h1 {
+        margin: 2rem 0 1rem 0;
         font-family: map-deep-get($typography, 'font-family', 'bold'),
             sans-serif;
     }
